--- a/pom.xml
+++ b/pom.xml
@@ -18,10 +18,12 @@
 		<java.version>16</java.version>
 	</properties>
 	<dependencies>
+	   
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -29,12 +31,25 @@
 			<scope>test</scope>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/com.microsoft.sqlserver/mssql-jdbc -->
+		
+		<dependency>
+      		<groupId>org.springframework.boot</groupId>
+      		<artifactId>spring-boot-starter-data-jpa</artifactId>
+  		  </dependency>
+		
+
 		<dependency>
 			<groupId>com.microsoft.sqlserver</groupId>
 			<artifactId>mssql-jdbc</artifactId>
-			<version>9.2.1.jre15</version><!--$NO-MVN-MAN-VER$ -->
+			<version>9.2.1.jre15</version><!--$NO-MVN-MAN-VER$-->
+			<!--$NO-MVN-MAN-VER$ -->
 		</dependency>
-
+		
+		<dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+        </dependency>
+		
 	</dependencies>
 
 	<build>
